...
        modifier = modifier
    ) {
        Text("Choose a strong password", style = MaterialTheme.typography.headlineMedium)
        ValidationPasswordTextField(
            value = password.value,
            validation = password.validationResult,
            label = "Password",
            modifier = Modifier.fillMaxWidth(),
            onValueChange = onPasswordValueChange,
        )
        ValidationPasswordTextField(
            value = confirmPassword.value,
            validation = confirmPassword.validate(password.value),
            label = "Confirm Password",
            modifier = Modifier.fillMaxWidth(),
            onValueChange = onConfirmPasswordValueChange,
        )
    }
}

...
