...
    sealed class NoArgumentsDestination(route: String) : Destination(route) {
        operator fun invoke() = route
    }

    object Login : NoArgumentsDestination("login")
    object Settings : NoArgumentsDestination("settings")
    class Register : Destination("Register", Map.latKey, Map.lngKey) {
        operator fun invoke(lat: Double = 0.0, lng: Double = 0.0) =
            "$route/$lat/$lng"
    }

    object Map : Destination("map", "lat", "lng") {
        const val latKey = "lat"
...
